only missing lit review and conclusion!

--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -114,22 +114,20 @@ A visual association between changes of Republican Vote Share and Hispanic Popul
  
 I determined two main ways to examine the robustness of these models: 1) I examined the model outputs at higher level of aggregation by constructing the same models using a subset of data by state. In this case, I used Florida, which is my home state and one that has received a very high influx of hispanics over the last decade. Despite, the smaller sample, which inherently causes decreased statistical significance, HHH's overall conclusions are validated. In addition, I constructed a series of models excluding a different state each time to examine whether any single state was shaping the conclusions and found that no individual state is driving the original conclusions. 2) Heterogeneity in fixed effects models means different means among categories such as states and year. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors [@fixed]. However, fixed effects models can control and estimate these effects. I constructed mirror models using plm(y ~ x, data = mydata, within = “state”) and found that a fixed effects model do not alter the overarching conclusions even when absorbing the effects particular to each state [@fixed2]. Both methods resulted in successful measures of robustness confirming HHH's original quantitative findings, if not the exact theoretical claim. 
 
-In addition to exploring the robustness of HHH's findings, I built a new model using the original datasets to explore the association between economic indicators and changes in Republican voters. I constructed a series of models that explain shifts in GOP share of voters in terms of changes in hispanic proportion, changes in unemployment, and proportion change of poor to consider the economic influences on Republican voters share shifts respectively and in combination. In addition, I construct a model to examine how the interaction of change in unemployment and change in Hispanic proportion affect GOP vote share in each time period. I also construct a model using only changes in unemployment and proportion change of poor as explanatory variables to GOP share in these intervals. The results show that unemployment may have an even stronger effect on GOP share of voters between 2011-2016, but not in the 2000-2016, indicating an interesting trend in.... (penalization of candidates, demographic preferences, etc?).
+In addition to exploring the robustness of HHH's findings, I built a new model using the original datasets to explore the association between economic indicators and changes in Republican voters. I constructed a series of models that explain shifts in GOP share of voters in terms of changes in hispanic proportion, changes in unemployment, and proportion change of poor to consider the economic influences on Republican voters share shifts respectively and in combination. In addition, I construct a model to examine how the interaction of change in unemployment and change in Hispanic proportion affect GOP vote share in each time period. I also construct a model using only changes in unemployment and proportion change of poor as explanatory variables to GOP share in these intervals. The results show that unemployment may have an even stronger effect on GOP share of voters between 2011-2016, indicating an interesting trend in the way voters appear to be penalizing candidates in general elections.
  
- 
- 
-DELETE
-The first paragraph is a review of the paper you are replicating. Place it within the relevant literature, via a key citation or two. Highlight implications and caveats. 
-
-The second paragraph provides more details on your replications. Mention that you used R, and provide an citation to R which will appear in your bibliography. (See citation().) Cite the location from which you got the data and code for your replication. (This might be to the Dataverse, a webpage or “personal communication” with the author.) Provide a footnote with a link to your repo.
-
-The Third and Fourth paragraphs: What did you do? What did you find?
-DELETE
 
 
 \newpage
 # Paper & Literature Review
 
+coupled ACS data and Census data to construct measures of demographic changes for 2000 to 2016 and 2011 to 2016. 
+
+These windows capture 2 theoretically distinct characterizations of immigrant threat, either of
+which is plausible. The 1st is the idea that cumulative, longterm changes in local demographics may create citizen unease
+that was activated by Trump’s candidacy. The 2nd represents a
+characterization in which more recent changes are most salient
+for individuals’ perceptions of their local communities. 
 
 Using a data set of nearly 32000 precincts across the states of Florida, Georgia, Michigan, Nevada, Ohio, Pennsylvania, and Washington, HHH aimed to understand whether demographic changes at low levels of aggregation were associated with vote shifts toward an anti-immigration presidential candidate between 2012 and 2016.
 
@@ -369,7 +367,146 @@ The coefficients of these models (each of which excludes a different state) cons
 # Robutness Check #2: Fixed Effects Model
 
 
+In statistics, a model that has fixed parameters or non-random quantities is called fixed effects model. In general, based on some observed factors, data can be divided into groups. The group means could be assumed as constant or non-constant across groups. And in a fixed effects model, just as its name implies, each group mean is a specifically fixed quantity. Furthermore, the assumption of fixed effect is that the group-specific effects are correlated with the independent variables. Heterogeneity in fixed effects models means different means among categories such as states. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors. However, fixed effects models can control and estimate these effects. The plm fixed effects model essentially captures any and all systematic differences across precincts that are state-invariant.
+
+
+
+```{r clusters, results="asis"}
+
+
+plm1 <- plm(gop_propvote_change ~ d1611_hispanic, data = precinct_data, weights = weight, model = 'within', index = 'st')
+
+plm2 <- plm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid, 
+         data = precinct_data, 
+         weights = weight,
+         model = 'within', 
+         index = 'st') 
+
+plm3 <- plm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = precinct_data, 
+         weights = weight,
+         model = 'within', 
+         index = 'st')
+
+
+plm4 <- plm(gop_propvote_change ~  dprop1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = precinct_data, 
+         weights = weight,
+         model = 'within', 
+         index = 'st')
+
+plm5 <- plm(gop_propvote_change ~ d1600_hispanic, 
+         data = precinct_data, 
+         weights = weight,
+         model = 'within', 
+         index = 'st')
+  
+  
+
+plm6 <- plm(gop_propvote_change ~ d1600_hispanic + l00_hispanic + d1600_poor + d1600_unemp + 
+           d1600_mfg + d1600_pop + l00_poor + l00_unemp + l00_mfg + l00_density + l00_black + 
+           l00_educba + countyid,
+         data = precinct_data,
+         weights = weight,
+         model = 'within', 
+         index = 'st')
+  
+  
+plm7 <- plm(gop_propvote_change ~ d1600_hispanic + l00_hispanic + d1600_poor + d1600_unemp + 
+           d1600_mfg + d1600_pop + l00_poor + l00_unemp + l00_mfg + l00_density + l00_black + 
+           l00_educba + countyid + decile_repvote12,
+         data = precinct_data,
+         weights = weight,
+         model = 'within', 
+         index = 'st')
+
+  
+plm8 <- plm(gop_propvote_change ~ dprop1600_hispanic + l00_hispanic + d1600_poor + d1600_unemp + 
+           d1600_mfg + d1600_pop + l00_poor + l00_unemp + l00_mfg + l00_density + l00_black + 
+           l00_educba + countyid + decile_repvote12,
+         data = precinct_data,
+         weights = weight,
+         model = 'within', 
+         index = 'st')
+
+stargazer(plm1, plm2, plm3, plm4, plm5, plm6, plm7, plm8,
+          title = "Change in Republican vote share 2012 to 2016 and change in Hispanic population, various time intervals, fixed effects by State",
+         omit = c("d1611_poor", "d1611_unemp", "d1611_rent", "d1611_rent_income", "d1611_housing_150", "d1611_mfg",
+                  "d1611_pop", "l11_poor", "l11_unemp", "l11_rent", "l11_rent_income", "l11_housing_150", "l11_mfg",
+                  "l11_density", "l11_black", "l11_educba", "countyid", "d1600_poor", "d1600_unemp", "d1600_mfg",
+                  "d1600_pop", "l00_poor", "l00_unemp", "l00_mfg", "l00_density", "l00_black", "l00_educba",
+                  "decile_repvote12"),
+                  covariate.labels = c("Change in Prop. Hispanic, 2011 to 2016", "Prop. Change in Prop. Hispanic, 2011 to 2016",
+                              "Prop. Hispanic 2011", "Prop. Change in Prop. Hispanic, 2000 to 2016",
+                              "Change in Prop. Hispanic, 2000 to 2016","Prop. Hispanic 2000"),
+         omit.stat = c("f", "ser"),
+         dep.var.labels.include = FALSE,
+         
+         # Need to work on getting rid of dependent variable row.
+         
+         column.sep.width = "-15pt",
+         no.space = T)
+```
+
+Table 3 shows a lack of statistical significance for Models #1 and #5 compared to the original and replicated models, which show statistical significance across all 8 models. Notably, the overall effect of Hispanic proportion change on Republican vote share appears weak and unreliable when accounting for the systematic differences across precincts (the fixed effects model). However, the direct effect seems clearer as more explanatory variables are added. These coefficients are similar in sign and magnitude to the original findings and support HHH's findings.
+
+
 # A New Model: Economic Indicators & Hispanic Population Change
+
+
+This model isolates economic indicators to explore their effect on republican vote share as well as its association to hispanic proportion changes.
+
+```{r econ, results="asis"}
+
+# 2011-2016
+
+# Because of multi-collinearity concerns, I'm creating a model for change in prop.
+# unemployed and one for change in prop. poor while interacting these explanatory
+# variables with change in prop. hispanic.
+
+ecm1 <- lm(gop_propvote_change ~ d1611_hispanic + d1611_unemp, data = precinct_data, weights = weight)
+
+ecm1.5 <- lm(gop_propvote_change ~ d1611_hispanic*d1611_unemp, data = precinct_data, weights = weight) 
+
+# I considered using the proportion of poor and unemployed (l11_poor +
+# l11_unemp), but figured the prop change would be a more appropriate value as
+# it shows the effect of change on the change in GOP share.
+
+ecm2 <- lm(gop_propvote_change ~ d1611_hispanic + d1611_poor, data = precinct_data, weights = weight)
+
+ecm2.5 <- lm(gop_propvote_change ~ d1611_hispanic*d1611_poor, data = precinct_data, weights = weight) 
+
+ecm3 <- lm(gop_propvote_change ~ d1611_hispanic + d1611_poor + d1611_unemp, data = precinct_data, weights = weight) 
+ 
+
+
+stargazer(ecm1, ecm1.5, ecm2, ecm2.5, ecm3,
+          title = "Change in Republican vote share 2012 to 2016 and change in Economic Indicators and Hispanic population, various time intervals",
+         omit.stat = c("f", "ser"),
+         covariate.labels = c("Change in Prop. Hispanic, 2011 to 2016", "Change in Prop. Unemployed, 2011 to 2016", "Interaction: Chg Prop. Hisp 11-16 and Chg Prop. Unemp. 11-16", "Change in Prop. Poor, 2011 to 2016", "Interaction: Chg Prop. Hisp 11-16 and Chg Prop. Poor 11-16"),
+         dep.var.labels.include = FALSE,
+         
+         # Need to work on getting rid of dependent variable row.
+         
+         column.sep.width = "-5pt",
+         no.space = T)
+
+
+
+
+
+```
+
+Table 4 explores the association between economic indicators and changes in Republican voters between 2011 and 2016. The first model indicates that changes in unemployment between 2011 and 2016 have a stronger negative effect on the change of Republican vote share (positive values indicate pro-Republican shifts) than increases in Hispanic proportion change during this time period. The magnitude is significantly greater and both values hold statistical significance. In model 2, we observe the interaction effect between Hispanic change and unemployment change is actually positive suggesting that if there is both an influx of Hispanics and a spike in unemployment, then the Republican vote share would be positively impacted. Notably, this value is not statistically significant due to its large standard error and requires further testing. Model 3 indicates that changes in proportion of poor is associated with positive change in GOP votes share, a value that is small, but statistically significant. The interaction between change in proportion of Hispanics and change in proportion of poor resulted in a miniscule positive coefficient without statiscal significance, which may indicate Republican favor, but requires further analysis. The last model shows the effect of each of these explanatory variables when controlling for the others indicating that changes in unemployment has, in fact, a much stronger influence than even Hispanic influx over the 2012-2016 period.
 
 
 # Conclusion
@@ -380,7 +517,500 @@ The second paragraph provides more details on your replications.
 
 Conclusion, the last paragraph is where you get to speculate: What does it all mean? What should we research next?
 
+
+
+\newpage
 # Appendix
 
+#### Replication of Table 1:
+
+
+Table 1 presents multiple least-squares regression estimates of how changes in Hispanic populations at different time intervals correlate with increases in Republican precinct-level vote share between 2012 and 2016.
+
+```{r table1, results="asis"}
+
+# AnalyzePooledPrecinctLevelFiles.do 
+
+# Estimate the effect of changing Hispanic population on change in Republican
+# vote share from 2012 to 2016.
+
+# Note that the authors create local variables in stata that mean different
+# variables depending on the model that the regression is running. The local
+# variables used in stata for the regressions in Table 1 are outlined within the
+# if_else statement starting with "if `modelgroups'==1". The definitions
+# outlined in it run through the standard regressions the authors built at the
+# bottom of the document that apply to all of the tables/models within the
+# if_else statement.
+
+
+# Table 1 has eight regression models. I'll replicate each of them in R and then
+# try to display them all together to mimic the paper's output.
+
+
+# IMPORTANT: this note refers to the order in which translation of the stata
+# local variables should take place.
+# Variables to present in the production tables (in order). 
+# local keepvars = "`iv_c_1611' `iv_pc_1611' `iv_c_1600'
+# `iv_pc_1600' l11_hispanic l00_hispanic l11_foreign l00_foreign"
+
+# Regression Model 1:
+# regress `dv' `iv_c_1611' [aweight=weight]
+
+precinct_data <- precinct_data %>% 
+  drop_na()
+
+m1 <- lm(gop_propvote_change ~ d1611_hispanic, data = precinct_data, weights = weight) 
+
+
+
+# Regression Model 2:
+# regress `dv' `iv_c_1611' `cv_c_1611' `cv_l_1611' [aweight=weight], robust
+
+m2 <- lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid, 
+         data = precinct_data, 
+         weights = weight) 
+
+# m2$coefficients <- m2$coefficients[1:3] 
+# shows only intercept, Change in prop. Hispanic,2011 to 2016, and Prop. Hispanic 2011
+
+
+
+#Regression Model 3:
+# regress `dv' `iv_c_1611' `cv_c_1611' `cv_l_1611' rv12d_* [aweight=weight], robust
+
+m3 <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+          data = precinct_data, 
+          weights = weight) 
+
+
+# I believe that decile_repvote12 combines all of the rv12d_*, which I believe
+# is what we are supposed to do,
+
+# m3$coefficients <- m2$coefficients[1:3] 
+# shows only intercept, Change in prop. Hispanic,2011 to 2016, and Prop. Hispanic 2011
+
+
+
+# Regression Model 4:
+# regress `dv' `iv_pc_1611' `cv_c_1611' `cv_l_1611'  rv12d_* [aweight=weight], robust
+m4 <-  lm(gop_propvote_change ~  dprop1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+          data = precinct_data, 
+          weights = weight) 
+
+
+# Regression Model 5:
+
+# regress `dv' `iv_c_1600' [aweight=weight], robust
+
+m5 <- lm(gop_propvote_change ~ d1600_hispanic, 
+         data = precinct_data, 
+         weights = weight) 
+
+
+
+# Regression Model 6:
+
+# regress `dv' `iv_c_1600' `cv_c_1600' `cv_l_1600' [aweight=weight], robust
+
+m6 <- lm(gop_propvote_change ~ d1600_hispanic + l00_hispanic + d1600_poor + d1600_unemp + 
+           d1600_mfg + d1600_pop + l00_poor + l00_unemp + l00_mfg + l00_density + l00_black + 
+           l00_educba + countyid,
+         data = precinct_data,
+         weights = weight)
+
+
+# Regression Model 7:
+# regress `dv' `iv_c_1600' `cv_c_1600' `cv_l_1600' rv12d_* [aweight=weight], robust
+
+m7 <- lm(gop_propvote_change ~ d1600_hispanic + l00_hispanic + d1600_poor + d1600_unemp + 
+           d1600_mfg + d1600_pop + l00_poor + l00_unemp + l00_mfg + l00_density + l00_black + 
+           l00_educba + countyid + decile_repvote12,
+         data = precinct_data,
+         weights = weight)
+
+
+
+# Regression Model 8:
+# regress `dv' `iv_pc_1600' `cv_c_1600' `cv_l_1600'  rv12d_* [aweight=weight], robust
+
+m8 <- lm(gop_propvote_change ~ dprop1600_hispanic + l00_hispanic + d1600_poor + d1600_unemp + 
+           d1600_mfg + d1600_pop + l00_poor + l00_unemp + l00_mfg + l00_density + l00_black + 
+           l00_educba + countyid + decile_repvote12,
+         data = precinct_data,
+         weights = weight)
+
+
+stargazer(m1, m2, m3, m4, m5, m6, m7, m8,
+          title = "Table 1. Change in Republican vote share 2012 to 2016 and change in Hispanic population, various time intervals",
+          omit = c("d1611_poor", "d1611_unemp", "d1611_rent", "d1611_rent_income", "d1611_housing_150", "d1611_mfg",
+                   "d1611_pop", "l11_poor", "l11_unemp", "l11_rent", "l11_rent_income", "l11_housing_150", "l11_mfg",
+                   "l11_density", "l11_black", "l11_educba", "countyid", "d1600_poor", "d1600_unemp", "d1600_mfg",
+                   "d1600_pop", "l00_poor", "l00_unemp", "l00_mfg", "l00_density", "l00_black", "l00_educba",
+                   "decile_repvote12"),
+          covariate.labels = c("Change in Prop. Hispanic, 2011 to 2016", "Prop. Change in Prop. Hispanic, 2011 to 2016",
+                               "Prop. Hispanic 2011", "Prop. Change in Prop. Hispanic, 2000 to 2016",
+                               "Change in Prop. Hispanic, 2000 to 2016","Prop. Hispanic 2000"),
+          omit.stat = c("f", "ser"),
+          dep.var.labels.include = FALSE,
+          
+          # Need to work on getting rid of dependent variable row.
+          
+          column.sep.width = "-15pt",
+          no.space = T)
+
+# float.env = "sidewaystable")
+# This was not necessary in the end bc I was able to reduce size.
+
+# I need to figure out how to add this to the notes section at the bottom later:
+# Robust standard errors are in parentheses. *P < 0.05; **P < 0.01.
+# Precinct-level analysis; weighted to number of votes 2012; proportional
+# changes top and  bottom coded at 1 and −1.
+
+# Note: Dependent variable is change in GOP vote share, 2012 to 2016. Prop.,
+# proportion
+
+
+# The variable definitions from 02_AnalyzePooledPrecinctLevelFiles .do  
+
+# if `modelgroups'==1 {
+# 
+# 	local dv = "gop_propvote_change"
+# 	local iv_c_1611 = "d1611_hispanic"
+# 	local iv_pc_1611 = "dprop1611_hispanic"
+# 	local cv_c_1611 = "d1611_poor d1611_unemp d1611_rent d1611_rent_income d1611_housing_150 d1611_mfg d1611_pop"
+# 	local cv_l_1611 = "l11_hispanic l11_poor l11_unemp l11_rent l11_rent_income l11_housing_150 l11_mfg l11_density l11_black l11_educba i.countyid "
+# 
+# 	local iv_c_1600 = "d1600_hispanic"
+# 	local iv_pc_1600 = "dprop1600_hispanic"
+# 	local cv_c_1600 = "d1600_poor d1600_unemp d1600_mfg d1600_pop"
+# 	local cv_l_1600 = "l00_hispanic l00_poor l00_unemp l00_mfg l00_density l00_black l00_educba i.countyid "
+# 
+# 	local iv_c_1100 = "d1100_hispanic"
+# 	local iv_pc_1100 = "dprop1100_hispanic"
+# 	local cv_c_1100 = "d1100_poor d1100_unemp d1100_mfg d1100_pop"
+# 		
+# 	local notes="Precinct-level analysis; Weighted to number of votes 2012; Proportional changes top and bottom coded at 1 and -1"
+# 	local outregfile = "$TABLELOC/Table01_WeightedFullSample"
+```
+
+
+
+### Figure 1
+
+Figure 1 (A, B, C, & D) examine(s) how changes in Hispanic populations correlate with increases in Republican precinct-level vote share between 2012 and 2016. The figure shows change in the Republican share of the 2-party vote from 2012 to 2016 (positive values indicate pro-Republican shifts) against 4 different measures of change in the Hispanic population on the x axis. The 1st frame (A) measures changing population as the change in the Hispanic proportion of the overall population from 2011 to 2016, the 2nd (B) as the same change from 2000 to 2016, and the 3rd (C) and 4th (D) as proportional changes in the Hispanic population for each period.
+
+```{r fig1a, warning = FALSE}
+
+# This graphic replicates Fig. 1A from the paper:
+
+# Change in Republican vote share, 2012 to 2016, and change in Hispanic
+# population 2011-2016. Note: Points are random samples of 2,000 precincts.
+# Loess lines are generated from all observations. Points are shaded
+# corresponding to density, with darker colors indicating more precincts.
+
+# My graphic complies with the first two lines of that description. I am using
+# the sample function to get a random sample from my precinct dataset. I was
+# able to create the loess line using geom_smooth, which does not appear
+# disimilar to the paper's model.
+
+new_precinct <- precinct_data %>% 
+  drop_na()
+
+# How the original created the internal 90% of data selection:
+# int.90 <- function(x) {
+# Return boolean for data in the interior 90% of data.
+#  x <= quantile(x,.95,na.rm=T) & x >= quantile(x,.05,na.rm=T)}
+
+# interior 90% of data, no log scale
+# On d1611.
+#  DT[int.90(d1611_hispanic),.myPlot(x=d1611_hispanic,y=gop_propvote_change,ylab="Change in GOP share, 2012 to 2016",xlab="Change in population share Hispanic, 2011 to 2016")]
+
+# This means they only used the inner 90% of the change in hispanic variable.
+
+
+# To prepare my sample using the inner 90% of the data, I use the quatile
+# function inside a mutate.
+
+sample_1 <- sample_n(new_precinct, 2000) %>% 
+  mutate(d1611_hispanic <= quantile(d1611_hispanic,.95,na.rm=T) & 
+           d1611_hispanic >= quantile(d1611_hispanic,.05,na.rm=T))
+
+# With every sample ran a different number of non-finite/missing values exists,
+# and a warning sign appears. Because these values are not relevant to the
+# graphic I'm constructing, I will ignore these warnings. 
+
+
+
+fig1a <- sample_1 %>% 
+  ggplot(aes(x = d1611_hispanic, y = gop_propvote_change)) + 
+  
+  # gop_propvote_change is Change in Prop of Republican Voters 2016-2012
+  # d1611_hispanic is Change in Prop of Hispanic 2011-2016
+  # Total_Voters_2016_Prct is total number of voters by precinct
+  
+  geom_point(alpha = 0.2) +
+  
+  # At first, I was confused and thought their mention of density referred to
+  # the density variables in my dataset, but it is only referring to the number
+  # of precincts with overlapping numbers causing darker shades. Nothing to do
+  # on my end. The other density variable could be quartile_popdens, which
+  # refers to Quartile of 2016 Population Density. I chose 2011 density bc I
+  # thought it made the most sense in evaluating the effect of the change.
+  # l11_density OR quartile_popdens
+  
+  stat_smooth(method = "loess", formula = y ~ x, size = 0.5, color = "green", se = FALSE) +
+  
+  # Method loess is a smoothing method that acts much like a regression, but it
+  # is not linear.
+  
+  # scale_x_discrete(breaks = seq(-0.04, 0.08, by = 0.02)) +
+  # scale_x_continuous(breaks = seq(-0.04, 0.08, by = 0.02)) 
+  
+  xlim(-0.04, 0.08) +
+  ylim(-0.4,0.4) +
+  
+  
+  # This will emphasize the part of the graph that is most dense.
+  
+  labs(title = "A",
+       y = "Change in GOP share, 2012 to 2016",
+       x = "Change in population share Hispanic, 2011 to 2016") + 
+  theme_minimal()
+
+# I have so far been unable to replicate the x axis tick labels, but I have been
+# able to get the x and y axis limits. I may need to change the theme to
+# replicate the axis lines format.
+
+fig1a
+
+```
+
+
+
+
+
+```{r fig1b}
+
+# This graphic replicates Fig. 1B from the paper:
+
+# Change in Republican vote share, 2012 to 2016, and change in Hispanic
+# population 2000-2016. Note: Points are random samples of 2,000 precincts.
+# Loess lines are generated from all observations. Points are shaded
+# corresponding to density, with darker colors indicating more precincts.
+
+# I am using the sample function to get a random sample from my precinct
+# dataset. I was able to create the loess line using geom_smooth, which does not
+# appear disimilar to the paper's model.
+
+new_precinct <- precinct_data %>% 
+  drop_na()
+
+
+# To prepare my sample using the inner 90% of the data, I use the quatile
+# function inside a mutate just like before, but this time for the hispanic 2000
+# variable.
+
+sample_2 <- sample_n(new_precinct, 2000) %>% 
+  mutate(d1600_hispanic <= quantile(d1600_hispanic,.95,na.rm=T) & 
+           d1600_hispanic >= quantile(d1600_hispanic,.05,na.rm=T))
+
+# With every sample ran a different number of non-finite/missing values exists,
+# and a warning sign appears. Because these values are not relevant to the
+# graphic I'm constructing, I will ignore these warnings. 
+
+
+
+fig1b <- sample_2 %>% 
+  ggplot(aes(x = d1600_hispanic, y = gop_propvote_change)) + 
+  
+  # gop_propvote_change is Change in Prop of Republican Voters 2016-2012
+  # d1600_hispanic is Change in Prop of Hispanic 2000-2016
+  
+  geom_point(alpha = 0.2) +
+  
+  # This use of alpha allows for the density shading where more precincts lie in
+  # the grid.
+  
+  stat_smooth(method = "loess", formula = y ~ x, size = 0.5, color = "green", se = FALSE) +
+  
+  # Method loess is a smoothing method that acts much like a regression, but it
+  # is not linear.
+  
+  
+  xlim(0.0, 0.15) +
+  ylim(-0.4,0.4) +
+  
+  
+  # This will emphasize the part of the graph that is most dense.
+  
+  labs(title = "B",
+       y = "Change in GOP share, 2012 to 2016",
+       x = "Change in population share Hispanic, 2000 to 2016") + 
+  theme_minimal()
+
+# I may need to change the theme to replicate the axis lines format.
+
+fig1b
+
+```
+
+
+
+```{r fig1c}
+
+
+# This graphic replicates Fig. 1C from the paper:
+
+# Change in Republican vote share, 2012 to 2016, and Proportional change in
+# population Hispanic, 2011 to 2016. Note: Points are random samples of 2,000
+# precincts. Loess lines are generated from all observations. Points are shaded
+# corresponding to density, with darker colors indicating more precincts.
+
+# I am using the sample function to get a random sample from my precinct
+# dataset. I was able to create the loess line using geom_smooth, which does not
+# appear disimilar to the paper's model.
+
+new_precinct <- precinct_data %>% 
+  drop_na()
+
+
+# To prepare my sample using the inner 90% of the data, I use the quatile
+# function inside a mutate just like before, but this time for the hispanic 2000
+# variable.
+
+sample_3 <- sample_n(new_precinct, 2000) %>% 
+  mutate(dprop1611_hispanic_notopcode <= quantile(dprop1611_hispanic_notopcode,.95,na.rm=T) & 
+           dprop1611_hispanic_notopcode >= quantile(dprop1611_hispanic_notopcode,.05,na.rm=T))
+
+# With every sample ran a different number of non-finite/missing values exists,
+# and a warning sign appears. Because these values are not relevant to the
+# graphic I'm constructing, I will ignore these warnings. 
+
+
+
+fig1c <- sample_3 %>% 
+  ggplot(aes(x = dprop1611_hispanic_notopcode, y = gop_propvote_change)) + 
+  
+  # gop_propvote_change is Change in Prop of Republican Voters 2016-2012
+  # d1600_hispanic is Change in Prop of Hispanic 2000-2016
+  
+  geom_point(alpha = 0.2) +
+  
+  # This use of alpha allows for the density shading where more precincts lie in
+  # the grid.
+  
+  stat_smooth(method = "loess", formula = y ~ x, size = 0.5, color = "green", se = FALSE) +
+  
+  # Method loess is a smoothing method that acts much like a regression, but it
+  # is not linear.
+  
+  
+  xlim(0.0, 4.0) +
+  ylim(-0.4,0.4) +
+  
+  
+  # This will emphasize the part of the graph that is most dense.
+  
+  labs(title = "C",
+       y = "Change in GOP share, 2012 to 2016",
+       x = "Proportional change in population Hispanic, 2011 to 2016") + 
+  theme_minimal()
+
+# I may need to change the theme to replicate the axis lines format.
+
+fig1c
+
+```
+
+
+
+
+```{r fig1d}
+
+# This graphic replicates Fig. 1D from the paper:
+
+# Change in Republican vote share, 2012 to 2016, and Proportional change in
+# population Hispanic, 2000 to 2016. Note: Points are random samples of 2,000
+# precincts. Loess lines are generated from all observations. Points are shaded
+# corresponding to density, with darker colors indicating more precincts.
+
+# I am using the sample function to get a random sample from my precinct
+# dataset. I was able to create the loess line using geom_smooth, which does not
+# appear disimilar to the paper's model.
+
+new_precinct <- precinct_data %>% 
+  drop_na()
+
+
+# To prepare my sample using the inner 90% of the data, I use the quatile
+# function inside a mutate just like before, but this time for the hispanic 2000
+# variable.
+
+sample_4 <- sample_n(new_precinct, 2000) %>% 
+  mutate(dprop1600_hispanic_notopcode <= quantile(dprop1600_hispanic_notopcode,.95,na.rm=T) & 
+           dprop1600_hispanic_notopcode >= quantile(dprop1600_hispanic_notopcode,.05,na.rm=T))
+
+# With every sample ran a different number of non-finite/missing values exists,
+# and a warning sign appears. Because these values are not relevant to the
+# graphic I'm constructing, I will ignore these warnings. 
+
+
+
+fig1d <- sample_4 %>% 
+  ggplot(aes(x = dprop1600_hispanic_notopcode, y = gop_propvote_change)) + 
+  
+  # gop_propvote_change is Change in Prop of Republican Voters 2016-2012
+  # d1600_hispanic is Change in Prop of Hispanic 2000-2016
+  
+  geom_point(alpha = 0.2) +
+  
+  # This use of alpha allows for the density shading where more precincts lie in
+  # the grid.
+  
+  stat_smooth(method = "loess", formula = y ~ x, size = 0.5, color = "green", se = FALSE) +
+  
+  # Method loess is a smoothing method that acts much like a regression, but it
+  # is not linear.
+  
+  
+  xlim(0.0, 4.0) +
+  ylim(-0.4,0.4) +
+  
+  
+  # This will emphasize the part of the graph that is most dense.
+  
+  labs(title = "D",
+       y = "Change in GOP share, 2012 to 2016",
+       x = "Proportional change in population Hispanic, 2000 to 2016") + 
+  theme_minimal()
+
+# I may need to change the theme to replicate the axis lines format.
+
+fig1d
+
+```
+
+
+```{r fig1}
+
+# Will potentially figure out how to put them together!
+
+# plot_grid(fig1a, fig1b)
+# plot_grid(fig1c, fig1d)
+
+```
+
+The figure shows a negative relationship between increasing Hispanic populations and heightened Republican support. This association holds for either the between-election time period of 2011 to 2016 or the longer time period of 2000 to 2016. Proportional changes in the 3rd and 4th frames both show a flat relationship between proportional change and change in Republican support.
+
+\newpage
 # References
 
